# port-manager

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  makefile  pyproject.toml  requirements.txt
man/: port-manager.1
port_manager/: cli.py
tests/: test_port_manager.py
